# rp1

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
example/: .env  Cargo.toml  docker-compose.yml  example.http  expanded.rs
example/migrations/2021-06-01-142715_foo/: down.sql  up.sql
example/migrations/2021-06-10-134617_initial_schema/: down.sql  up.sql
example/src/: main.rs  schema.rs
proc_macros/: Cargo.toml
rocket_crud/: Cargo.toml
rocket_crud/src/: access_control.rs  error.rs  filter.rs  helper.rs  lib.rs  sort.rs
rocket_crud/tests/: test_rocket_crud.rs
rocket_crud_macros/: Cargo.toml
rocket_crud_macros/src/: crud_impl.rs  lib.rs  props.rs
rocket_crud_macros/src/derive/: common.rs  create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
rocket_crud_tests/: .env  Cargo.toml
rocket_crud_tests/src/: access_control.rs  endpoints.rs  lib.rs  schema.rs  validate.rs
rp1/: Cargo.toml  Rocket.toml
rp1/docs/: lib.md
rp1/src/: access_control.rs  datetime.rs  error.rs  helper.rs  lib.rs
rp1/src/datetime/: date.rs  mod.rs  offset_date_time.rs  primitive_date_time.rs  time.rs
rp1_macros/: Cargo.toml
rp1_macros/docs/: crud.md
rp1_macros/src/: crud_impl.rs  error.rs  lib.rs  props.rs
rp1_macros/src/derive/: common.rs  create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
rp1_tests/: Cargo.toml  README.md
rp1_tests/src/: access_control.rs  endpoints.rs  lib.rs  schema.rs  validate.rs
