[workspace]
members = [
    "rp1",
    "rp1_macros",
    "rp1_tests",
    "example",
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
darling = "0.13"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
diesel_migrations = "2.1"
dotenv = "0.15"
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
rocket = { version = "0.5", features = ["json"] }
rocket_sync_db_pools = { version = "0.1", features = ["diesel_postgres_pool"] }
serde = "1.0"
serde_json = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
tempfile = "3.2"
thiserror = "1.0"
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
tokio = "1.8"
validator = { version = "0.16", features = ["derive"] }
