[package]
name = "rp1-example"
version = "0.1.0"
authors = ["Ruben Nijveld <ruben@tweedegolf.com>", "Folkert <folkert@folkertdev.nl>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp1 = { path = "../rp1/" }
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
rocket = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
serde = "1.0.127"
serde_json = "1.0.66"
chrono = { version = "0.4.19", features = ["serde"] }
validator = "0.14.0"
