[package]
name = "rp1-example"
version = "0.1.0"
authors = ["Ruben Nijveld <ruben@tweedegolf.com>", "Folkert <folkert@folkertdev.nl>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp1 = { path = "../rp1/" }
diesel.workspace = true
rocket.workspace = true
rocket_sync_db_pools.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
