[package]
name = "rocket-crud"
version = "0.1.0"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2018"

[dependencies]
rocket-crud-macros = { path = "../rocket_crud_macros/" }
either = "1.6.1"
serde = "1.0.126"
serde_json = "1.0.64"
rocket = "0.5.0-rc.1"
diesel = { version = "1.4.6" }
thiserror = "1.0.25"
chrono = "0.4.19"
