[package]
authors = ["The Roc Contributors"]
edition = "2018"
license = "UPL-1.0"
name = "rocket-crud"
version = "0.1.0"
[dependencies]
async-mutex = "1.4.0"
chrono = "0.4.19"
either = "1.6.1"
rocket = "0.5.0-rc.1"
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.25"

# optional = true automatically creates feature flag "validator"
validator = { version = "0.14.0", features = ["derive"], optional = true }
casbin = { version = "2.0.7", optional = true }

[dependencies.diesel]
version = "1.4.6"

[dependencies.rocket-crud-macros]
path = "../rocket_crud_macros/"


[features]
crud-validator = [ "validator", "rocket-crud-macros/validator" ]
crud-casbin = [ "casbin" ]

[dev-dependencies]
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = "1.0.126"
serde_json = "1.0.64"

[dev-dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dev-dependencies.diesel]
features = ["postgres", "r2d2", "chrono"]
version = "1.4.6"

[dev-dependencies.rocket]
features = ["json"]
version = "0.5.0-rc.1"

[dev-dependencies.rocket-crud]
path = "../rocket_crud/"

[dev-dependencies.rocket_sync_db_pools]
features = ["diesel_postgres_pool"]
version = "0.1.0-rc.1"

