[package]
name = "rocket-crud-macros"
version = "0.1.0"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.39", features = ["full", "extra-traits"] }
quote = "1.0.7"
darling = "0.10.2"
proc-macro2 = "1.0.24"
diesel_derives = "1.4.1"
Inflector = "0.11.4"
impls = "1.0.3"

# optional = true automatically creates feature flag "validator"
validator = { version = "0.14.0", features = ["derive"], optional = true }
