[package]
name = "rp1"
version = "0.1.0"
authors = ["Ruben Nijveld <ruben@tweedegolf.com>", "Folkert <folkert@folkertdev.nl>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Easily generate a REST-like CRUD API using Rocket and Diesel"
homepage = "https://github.com/tweedegolf/rp1"
documentation = "https://docs.rs/rp1"
repository = "https://github.com/tweedegolf/rp1"
readme = "../README.md"

[dependencies]
rp1-macros = { version = "0.1.0", path = "../rp1_macros/" }
async-mutex = "1.4.0"
chrono = "0.4.19"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.25"
validator = { version = "0.14.0", features = ["derive"], optional = true }
diesel = "1.4.6"

[features]
default = ["validation"]
validation = ["validator", "rp1-macros/validation"]

[dev-dependencies]
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = "1.0.126"
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "chrono"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
