[package]
name = "rp1"
version = "0.4.0"
authors = ["Ruben Nijveld <ruben@tweedegolf.com>", "Folkert <folkert@folkertdev.nl>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Easily generate a REST-like CRUD API using Rocket and Diesel"
homepage = "https://github.com/tweedegolf/rp1"
documentation = "https://docs.rs/rp1"
repository = "https://github.com/tweedegolf/rp1"
readme = "../README.md"

[dependencies]
rp1-macros = { version = "0.4.0", path = "../rp1_macros/" }
rocket.workspace = true
time.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
validator = { workspace = true, optional = true }
diesel.workspace = true

[features]
default = ["validation"]
validation = ["validator", "rp1-macros/validation"]

[dev-dependencies]
diesel_migrations.workspace = true
dotenv.workspace = true
diesel.workspace = true
rocket_sync_db_pools.workspace = true
