[package]
name = "rp1-macros"
version = "0.2.0"
authors = ["Ruben Nijveld <ruben@tweedegolf.com>", "Folkert <folkert@folkertdev.nl>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Macros for RP1"
homepage = "https://github.com/tweedegolf/rp1"
documentation = "https://docs.rs/rp1-macros"
repository = "https://github.com/tweedegolf/rp1"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.39", features = ["full", "extra-traits"] }
quote = "1.0.7"
darling = "0.10.2"
proc-macro2 = "1.0.24"
diesel_derives = "1.4.1"
Inflector = "0.11.4"

[features]
default = ["validation"]
validation = []
