[package]
name = "rp1-macros"
version = "0.3.0"
authors = ["Ruben Nijveld <ruben@tweedegolf.com>", "Folkert <folkert@folkertdev.nl>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Macros for RP1"
homepage = "https://github.com/tweedegolf/rp1"
documentation = "https://docs.rs/rp1-macros"
repository = "https://github.com/tweedegolf/rp1"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
darling = "0.13"
proc-macro2 = "1.0"
Inflector = "0.11"

[features]
default = ["validation"]
validation = []
