[package]
name = "rp1-macros"
version = "0.4.0"
authors = ["Ruben Nijveld <ruben@tweedegolf.com>", "Folkert <folkert@folkertdev.nl>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Macros for RP1"
homepage = "https://github.com/tweedegolf/rp1"
documentation = "https://docs.rs/rp1-macros"
repository = "https://github.com/tweedegolf/rp1"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
darling.workspace = true
proc-macro2.workspace = true
Inflector.workspace = true

[features]
default = ["validation"]
validation = []
