[package]
name = "rp1-tests"
version = "0.1.0"
authors = ["Ruben Nijveld <ruben@tweedegolf.com>", "Folkert <folkert@folkertdev.nl>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[dependencies]
rp1 = { path = "../rp1/" }
rocket.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rocket_sync_db_pools.workspace = true
validator.workspace = true
tempfile.workspace = true
tokio.workspace = true
